[project]
name = "canva-design-agent"
version = "0.1.0"
description = "Two-phase CLI: Claude vision analysis → Canva MCP build"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
]

[project.scripts]
canva-agent = "canva_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canva_agent"]
